-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.7.0-beta1
-
None
-
42b4d2752cffdb9cf2e395788f979fa35b07f9af
When profiling the samegame example even the main() function doesn't have a source location, nor any of the Qt symbols. Some obscure libc symbols do have a source location, though.
This could be either due to missing debug info, or because the unwinder doesn't see through the macro used to define main(). More analysis is needed here.
| For Gerrit Dashboard: QTCREATORBUG-20441 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 232808,2 | If dwfl_module_getsrc fails, iterate CUs to find source file/line | 4.7 | qt-creator/perfparser | Status: MERGED | +2 | 0 |